--- a/style.css
+++ b/style.css
@@ -14,15 +14,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -35,65 +26,41 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 24px;
   line-height: 1.1;
+  color: #f9f9f9;
+  margin-left: 16px;
 }
 
 #app {
-  width: 250px;
+  width: 300px;
   height: 250px;
   background-color: #646cff;
+  overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.cloudy {
+  background-color: #646cff;
+  color: grey;
 }
 
-.card {
-  padding: 2em;
+.sunny {
+  background-color: #ff6464;
+  color: yellow;
 }
 
-.read-the-docs {
-  color: #888;
+.snowy {
+  background-color: #fff;
+  color: #000;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#screen {
+  width: 100%;
+  height: calc(100% - 26.4px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
 }
