feat: add styling

--- a/style.css
+++ b/style.css
@@ -32,31 +32,37 @@ h1 {
   margin-left: 16px;
 }
 
+h2 {
+  font-size: 20px;
+  line-height: 1.1;
+  color: #f9f9f9;
+  margin-left: 16px;
+  position: absolute;
+  top: calc(50% - 70px);
+}
+
 #app {
   width: 300px;
   height: 250px;
-  background-color: #646cff;
+  background-color: white;
   overflow: hidden;
 }
 
 .cloudy {
   background-color: #646cff;
-  color: grey;
 }
 
 .sunny {
   background-color: #ff6464;
-  color: yellow;
 }
 
 .snowy {
   background-color: #fff;
-  color: #000;
 }
 
 #screen {
   width: 100%;
-  height: calc(100% - 26.4px);
+  height: calc(100% - 59px);
   display: flex;
   flex-direction: column;
   justify-content: center;
